update all feeders